--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Lading Page</title>
   </head>
-  <body></body>
+  <body>
+    <h1>oi</h1>
+  </body>
 </html>
