--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Lading Page</title>
   </head>
   <body>
-    <h1>oi</h1>
+    <aside class="menu">
+      <section class="main-content menu-content">
+        <h1><a href="#"> LOGO</a></h1>
+        <nav>
+          <ul>
+            <li><a href="#">intro</a></li>
+            <li><a href="#">top 3</a></li>
+            <li><a href="#">gallery</a></li>
+            <li><a href="#">work</a></li>
+            <li><a href="#">contact</a></li>
+          </ul>
+        </nav>
+      </section>
+    </aside>
   </body>
 </html>
