Definição de cores e background

--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
         </nav>
       </section>
     </aside>
+    <section class="main-bg">
+      <h1>oi</h1>
+    </section>
   </body>
 </html>
