Correções e seção Intro

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/element.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Lading Page</title>
   </head>
   <body>
-    <aside class="menu">
-      <section class="main-content menu-content">
-        <h1><a href="#"> LOGO</a></h1>
+    <aside class="menu white-bg">
+      <div class="main-content menu-content">
+        <h1><a href="#">LOGO</a></h1>
         <nav>
           <ul>
             <li><a href="#">intro</a></li>
@@ -19,10 +20,30 @@
             <li><a href="#">contact</a></li>
           </ul>
         </nav>
-      </section>
+      </div>
     </aside>
-    <section class="main-bg">
-      <h1>oi</h1>
+    <div class="menu-spacing"></div>
+    <section class="intro main-bg section">
+      <div class="main-content intro-content">
+        <div class="intro-text-content">
+          <h2>January brings us firefox 85</h2>
+          <p>
+            With this new Firefox homepage we wanted to lift that heavy mental
+            burden of remembering to finish those halfway read articles or
+            vacation research until you are ready to jump back and finish those
+            tasks. We’ve simplified and organized your on-the-go mobile
+            experiences into one central location, complete with new features to
+            help you ignore the online.
+          </p>
+        </div>
+        <div class="intro-img">
+          <img
+            src="assets/img/dev.svg"
+            alt="Um homem segurando a logo do CSS, uma mulher empurrando a logo do Javascrit e um homem segurando a logo do HTML5"
+          />
+        </div>
+      </div>
     </section>
+    <section class="white-bg section"></section>
   </body>
 </html>
