Formulario-MenuMobile-MediaQueries

--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
     <label class="close-menu-label" for="close-menu" title="close menu"></label>
     <aside class="menu white-bg">
       <div class="main-content menu-content">
-        <h1><a href="#">LOGO</a></h1>
+        <h1 onclick="getElementById('close-menu').checked = false;">
+          <a href="#home">LOGO</a>
+        </h1>
         <nav>
-          <ul>
+          <ul onclick="getElementById('close-menu').checked = false;">
             <li><a href="#home">intro</a></li>
-            <li><a href="#intro">top 3</a></li>
+            <li><a href="#intro">about</a></li>
             <li><a href="#grid-one">work</a></li>
             <li><a href="#gallery">gallery</a></li>
             <li><a href="#grid-two">jobs</a></li>
             <li><a href="#pricing">pricing</a></li>
-            <li><a href="#">contact</a></li>
+            <li><a href="#contact">contact</a></li>
           </ul>
         </nav>
       </div>
@@ -279,7 +281,7 @@
           </p>
         </div>
         <div class="intro-img">
-          <img src="assets/img/javascript.svg" alt="Logo de HTML, CSS e JS." />
+          <img src="assets/img/contact.svg" alt="Logo de HTML, CSS e JS." />
         </div>
         <div class="contact-form">
           <fieldset class="form-grid">
@@ -340,7 +342,7 @@
           rel="nofollow"
           target="_blank"
           href="https://beacons.page/otaviomiranda"
-          >Feito com <span class="heart">❤</span> por Otávio Miranda</a
+          >Feito com <span class="heart">❤</span> por Marcos Wlrich</a
         >
       </p>
     </footer>
